--- a/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/css/controller.css
+++ b/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/css/controller.css
@@ -98,7 +98,7 @@ img {
     height: 100%;
 }
 
-#touch, #orient {
+#touch, #orient, #hello {
     z-index: 5;
     color: white;
 }
@@ -155,6 +155,12 @@ svg, img {
     width: 220px;
 }
 
+.hello div {
+    text-align: center;
+    font-size: 70px;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
 .layout-default #dpad1          { display: none; }
 .layout-default #dpad2          { display: none; }
 .layout-default #buttonA        { display: none; }
@@ -162,6 +168,7 @@ svg, img {
 .layout-default #lrpad          { display: none; }
 .layout-default #touch          { display: none; }
 .layout-default #orient         { display: none; }
+.layout-default #hello         { display: none; }
 
 .layout-1button #dpad1          { display: none; }
 .layout-1button #dpad2          { display: none; }
@@ -170,7 +177,7 @@ svg, img {
 .layout-1button #lrpad          { display: none; }
 .layout-1button #touch          { display: none; }
 .layout-1button #orient         { display: none; }
-.layout-1button #message         { display: none; }
+.layout-1button #hello         { display: none; }
 
 .layout-2button #dpad1          { display: none; }
 .layout-2button #dpad2          { display: none; }
@@ -179,7 +186,7 @@ svg, img {
 .layout-2button #lrpad          { display: none; }
 .layout-2button #touch          { display: none; }
 .layout-2button #orient         { display: none; }
-.layout-2button #message         { display: none; }
+.layout-2button #hello         { display: none; }
 
 .layout-1dpad-1button #dpad1    { left: 70px; width: 160px; height: 160px; }
 .layout-1dpad-1button #dpad2    { display: none; }
@@ -245,14 +252,14 @@ svg, img {
 .layout-touch #touch           { display: block; }
 .layout-touch #orient          { display: none; }
 
-.layout-message #dpad1           { display: none; }
-.layout-message #dpad2           { display: none; }
-.layout-message #buttonA         { display: none; }
-.layout-message #buttonB         { display: none; }
-.layout-message #lrpad           { display: none; }
-.layout-message #touch           { display: none; }
-.layout-message #orient          { display: none; }
-.layout-message #message         { display: block; }
+.layout-hello #dpad1           { display: none; }
+.layout-hello #dpad2           { display: none; }
+.layout-hello #buttonA         { display: none; }
+.layout-hello #buttonB         { display: none; }
+.layout-hello #lrpad           { display: none; }
+.layout-hello #touch           { display: none; }
+.layout-hello #orient          { display: none; }
+.layout-hello #hello         { display: block; }
 
 .layout-orient #dpad1           { display: none; }
 .layout-orient #dpad2           { display: none; }
